Fixed pixel shifting for rotation_index=1.

--- a/assets/css/v2/dup/viewport.scss
+++ b/assets/css/v2/dup/viewport.scss
@@ -18,7 +18,7 @@
   }
 
   .dup-shifter--rotation-one {
-    left: 1920px;
+    left: -1920px;
   }
 
   .dup-shifter--rotation-two {
@@ -26,6 +26,6 @@
   }
 }
 
-.dup-screen-viewport--both {
+.dup-screen-viewport--all {
   width: 5760px;
 }
